Extra bug fixes

--- a/esphome/example_m5stack.yaml
+++ b/esphome/example_m5stack.yaml
@@ -84,6 +84,7 @@ switch:
     name: "Invert Power Pin"
     id: invert_power_pin_switch
     icon: mdi:swap-vertical
+    entity_category: config
     optimistic: true
     restore_mode: RESTORE_DEFAULT_ON
     on_turn_on:
@@ -134,6 +135,7 @@ number:
     name: "Power Trip Delay"
     id: power_trip_delay_number
     icon: mdi:timer-cog
+    entity_category: config
     unit_of_measurement: "ms"
     min_value: 500
     max_value: 10000
@@ -152,6 +154,7 @@ number:
     name: "Display Boot Delay"
     id: display_boot_delay_number
     icon: mdi:timer-sand
+    entity_category: config
     unit_of_measurement: "ms"
     min_value: 1000
     max_value: 15000
